--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -24,6 +24,8 @@
                                 <div class="title text-truncate" >{{pipe.name}}</div>
                             </div>
                             <div class="drag_drop_icon"><img src="assets/icons/drog_drop.svg"></div>
+                            <div class="stateIcon" *ngIf="pipe.enable"><img src="assets/images/activeStage.svg"></div>
+                            <div class="stateIcon" *ngIf="!pipe.enable"><img src="assets/images/inActiveStage.svg"></div>
                             <div class="title text-truncate" >{{pipe.name}}</div>
                             <div class="close_icon" (click)="removeStage(i)"><img src="assets/icons/close_field.svg"></div>
                         </div>
@@ -100,7 +102,7 @@
                         <div class="col-3 p-0">
                             <label class="kr-sg-toggle stageToggle">                                       
                                 <input type="checkbox" checked [(ngModel)]="selectedStage.enable">
-                                <div class="slider"><span class="enabled">Stage Enabled</span><span class="disabled">Stage disabled</span></div>
+                                <div class="slider"><span class="enabled">Stage Active</span><span class="disabled">Stage Inactive</span></div>
                             </label>
                         </div>
                     </div>
