--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1410,7 +1410,7 @@ div.divBlockEmptylastChild:first-child {
     position: relative;
     white-space: normal;
     &::before{
-        // display: none;
+        display: none;
         content: "";
         position: absolute;
         top: 100%;
@@ -1559,5 +1559,46 @@ div.divBlockEmptylastChild:first-child {
     .mr-10{
         margin-right: 10px;
     } 
-    cursor: pointer !important;
+    &.userengagment-tooltip{
+        padding: 0px 20px;
+        &::before{
+            display: block;
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: calc(50% - 5px);
+            margin-left: -5px;
+            border-width: 9px;
+            border-style: solid;
+            border-color: #fff transparent transparent transparent;
+        }
+        .data-content{
+            display: block;
+            margin: 0;
+            padding: 10px 0;
+            border-bottom: 1px solid #EFF0F1;
+            .main-title{
+                color: #5F6368;
+                font-weight: 500;
+                font-size: 10px;
+                line-height: 12px;
+                margin: 0 0 4px 0;
+            }
+            .title{
+                color: #000000;
+                font-weight: bold;
+                font-size: 14px;
+                line-height: 17px;
+                &.total{
+                    
+                }
+                &.new{
+                    color: #0D6EFD;
+                }
+                &.return{
+                    color: #FF784B;
+                }
+            }
+        }
+    }
 }
