--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -252,7 +252,11 @@
                     &.runningActive{
                         border: 1px solid #0D6EFD;
                         background: #E7F1FF;
-                        opacity: 0.5;
+                        opacity: 0.7 !important;
+                        background-color: #E7F1FF;
+                        -webkit-transition: background 1000ms linear;
+                        -ms-transition: background 1000ms linear;
+                        transition: background 1000ms linear;
                         .title{
                             color: #202124;
                             font-weight: 600;
@@ -261,10 +265,32 @@
                         }
                     }
                     &.runningActive2{
-                        
+                        border: 1px solid #0D6EFD;
+                        background: #E7F1FF;
+                        opacity: 0.5 !important;
+                        -webkit-transition: background 1000ms linear;
+                        -ms-transition: background 1000ms linear;
+                        transition: background 1000ms linear;
+                        .title{
+                            color: #202124;
+                            font-weight: 600;
+                            font-size: 12px;
+                            line-height: 20px;
+                        }
                     }
                     &.allRunningActive{
-                      
+                        border: 1px solid #0D6EFD;
+                        background: #E7F1FF;
+                        opacity: 0.4;
+                        -webkit-transition: background 1000ms linear;
+                        -ms-transition: background 1000ms linear;
+                        transition: background 1000ms linear;
+                        .title{
+                            color: #202124;
+                            font-weight: 600;
+                            font-size: 12px;
+                            line-height: 20px;
+                        }
                     }
                     .stateIcon{
                         position: absolute;
