Added document facets to Web SDK, functionlity to download related document on click & functionality to dump data on click on matched result.

--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -42,7 +42,7 @@
     display: none !important;
 }
 .search-container.conversation.full-page .faqs-bottom-actions{
-    display: none !important;
+    display: table !important;
 }
 .search-background-div{
     width: 100%;
