--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -17,7 +17,7 @@
                     <span class="pr-1">Searches</span>
                     <span class="pr-1">Results</span>
                 </div>
-                 <div class="date-info">All conversation sessions between <span class="bold-text">1 day</span> <!-- 01-08-2020 to 07-08-2020 -->
+                 <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span> <!-- 01-08-2020 to 07-08-2020 -->
                 </div>
                 <div class="date-select">
                     <span class="day time active">24 Hrs</span>
