Traits group name

--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -85,7 +85,7 @@
         
             <section class="table-content mt-0">
                 <header class="table-header">
-                    <div class="col-2" >TRAIT TYPE<img src="assets/icons/caretDown.svg"
+                    <div class="col-2" >TRAIT GROUP<img src="assets/icons/caretDown.svg"
                             class="ml-1 hide"></div>
                     <div class="col-9" >TRAITS <img src="assets/icons/caretDown.svg"
                             class="ml-1 hide"></div>
@@ -139,7 +139,7 @@
         <div class="modal-body traits-modal-popup">
 
             <div class="kr-sg-input-text">
-                <div class="label-text">Trait Type</div>
+                <div class="label-text">Trait Group</div>
                 <p class="text">Provide a name that represents group of traits. System will try to identify the
                     closest
                     trait in the group from user utterances.
