Rename of traits

--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -145,7 +145,7 @@
                     trait in the group from user utterances.
                     Example - 'vehicle type', 'device type'.
                 </p>
-                <input type="text" autocomplete="off" placeholder="Enter trait type" class="input-text" [(ngModel)]="traits.addEditTraits.groupName">
+                <input type="text" autocomplete="off" placeholder="Enter trait group" class="input-text" [(ngModel)]="traits.addEditTraits.groupName">
             </div>
             <div class="kr-sg-input-text">
                 <div class="label-text">Traits</div>
