--- a/findly-builder/src/app/components/stop-words/stop-words.component.html
+++ b/findly-builder/src/app/components/stop-words/stop-words.component.html
@@ -24,8 +24,8 @@
             <button class="kr-sg-button-primary btn_lg" (click)="addStopWord()" [disabled]="validation.duplicate || validation.spaceFound || !newStopWord">Add</button>
         </div>
      </div> 
-      <div class="empty_screen_data">
-        <div class="empty-stopwords" *ngIf="!(stopwords && stopwords.length) && !loadingContent && !createFromScratch">
+      <div class="empty_screen_data" *ngIf="!(stopwords && stopwords.length) && !loadingContent && !createFromScratch">
+        <div class="empty-stopwords" >
           <div class="main_heading">Let’s start by adding stop words</div>
           <div class="desc_info">Select on how would you like to add stop words.</div>
           <div class="radio-sec">
@@ -53,9 +53,9 @@
           </div>
         </div>  
       </div>         
-      <ng-container *ngIf="(stopwords && stopwords.length) && !loadingContent">
+      <ng-container>
       <div class="listingHeader row m-0">
-        <div class="col-5 p-0">
+        <div class="col-5 p-0" >
           <div class="desc-info-text" *ngIf="searchStopwords">{{'Showing ' + getActiveSearch()  +' results for ‘'+ searchStopwords  +'’'}}</div>
         </div>         
         <div class="col-7 p-0 d-flex align-items-center justify-content-end">
@@ -73,7 +73,7 @@
         </div>                     
     </div>
     <perfect-scrollbar class="table-scroll-perfect-synonyms">
-      <div class="stopWordsListing">
+      <div class="stopWordsListing"  *ngIf="(stopwords && stopwords.length) && !loadingContent">
         <span class="wordTag" *ngFor="let word of stopwords | filter: [searchStopwords] ; let index = index">
           <span class="word stopwordBlock" >{{word}}</span>
           <span class="deleteTag"><img (click)="deleteInfividualStopWords(index,$event)" src="assets/icons/clode_stop_word.svg"></span>
