--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -8,7 +8,7 @@
         <div class="title">Weights</div>
         <div class="restore_text" *ngIf="weights.length">
             <span class="lable_text" (click)="restoreWeights();"><img src="assets/icons/return_black.svg">Reset to Default</span>
-            <span class="clock_img"><img src="assets/icons/clock.svg"></span> 
+            <span class="clock_img d-none"><img src="assets/icons/clock.svg"></span> 
         </div>                   
     </div> 
     <!-- DATA TABLE START HERE -->
