business rules layout styles updated

--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -840,6 +840,7 @@ and open the template in the editor.
                     background-size: 14px;
                     background-repeat: no-repeat;
                     background-position: center;
+                    border: 0 !important;
                 }
             }
             &:focus{
