--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -246,7 +246,13 @@
                 <div class="col-6 box-content">
                     <div class="full-card">
                         <div class="title-card">Feedback</div>
-                        <div echarts [options]="feedbackPie1" class="demo-chart-graphMode"></div>
+                        <div class="">
+                            <div echarts [options]="feedbackPie1" class="demo-chart-graphMode"></div>
+                        </div>
+                        <!-- <div class="col-6 box-content">
+                            <div echarts [options]="feedbackPie1" class="demo-chart-graphMode"></div>
+                        </div> -->
+                        
                         <div class="legends_sec_piechart row m-0">
                             <div class="legend-data col-6 p-0">
                                 <div class="d-flex align-items-center mb-2">
