--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -13,12 +13,12 @@
                 </div>
             </div>            
             <div class="d-flex col-10 p-0 justify-content-end align-items-center">
-                <div class="date-info m-0" *ngIf="slider === 2">
+                <!-- <div class="date-info m-0" *ngIf="slider === 2">
                     <span class="pr-1">Searches</span>
                     <span class="pr-1">Results</span>
-                </div>
-                 <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span> <!-- 01-08-2020 to 07-08-2020 -->
-                </div>
+                </div> -->
+                 <!-- <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span> </div> 01-08-2020 to 07-08-2020 -->
+                
                 <div class="date-select">
                     <span class="day time active">24 Hrs</span>
                     <span class="week time ">7 Days</span>
@@ -48,13 +48,13 @@
                 </div>
                 <div class="col cards-data">
                     <div class="content">
-                        <div class="title-info">Total Search<img src="assets/icons/gray_info.svg" class="pl-1"></div>
+                        <div class="title-info">Total Searches<img src="assets/icons/gray_info.svg" class="pl-1"></div>
                         <div class="bottom-sec">
                             <div class="left-sec">
-                                <div class="count">{{totalSearchSum}}</div>
+                                <div class="count">2945</div> <!-- {{totalSearchSum}} -->
                                 <div class="data-percentage">
                                     <img src="assets/icons/arrow-increase.svg">
-                                    <span class="percentage">12%</span>
+                                    <span class="percentage">8%</span>
                                 </div>
                             </div>
                             <div class="right-sec">
@@ -71,7 +71,7 @@
                                 <div class="count">70%</div>
                                 <div class="data-percentage failed">
                                     <img src="assets/icons/arrow-decrease.svg">
-                                    <span class="percentage">34%</span>
+                                    <span class="percentage">3%</span>
                                 </div>
                             </div>
                             <div class="right-sec">
@@ -88,7 +88,7 @@
                                 <div class="count">70%</div>
                                 <div class="data-percentage">
                                     <img src="assets/icons/arrow-increase.svg">
-                                    <span class="percentage">34%</span>
+                                    <span class="percentage">2%</span>
                                 </div>
                             </div>
                             <div class="right-sec">
@@ -118,21 +118,21 @@
                                 <div class="title">Total Searches <span class="toatlsearches"></span></div>
                                 <div class="count-data">
                                     <span class="count"><img src="assets/icons/arrow_green.svg">{{totalSearchSum}}</span>
-                                    <span class="percentage">+12%</span>
+                                    <span class="percentage">+8%</span>
                                 </div>
                             </div>
                             <div class="content">
                                 <div class="title">Searches with Results <span class="withresults"></span></div>
                                 <div class="count-data">
                                     <span class="count"><img src="assets/icons/arrow_green.svg">{{searchesWithResultsSum}}</span>
-                                    <span class="percentage">+12%</span>
+                                    <span class="percentage">2%</span>
                                 </div>
                             </div>
                             <div class="content">
                                 <div class="title">Searches with Clicks <span class="clicks"></span></div>
                                 <div class="count-data">
                                     <span class="count"><img src="assets/icons/arrow_green.svg">{{searchesWithClicksSum}}</span>
-                                    <span class="percentage">+12%</span>
+                                    <span class="percentage">+1%</span>
                                 </div>
                             </div>
                         </div>
@@ -187,11 +187,12 @@
                                     Count</div>
                             </div>
                             <div *ngIf="topQuriesWithNoResults">
-                                <div class="table_header row m-0" *ngFor="let top of topQuriesWithNoResults;let i = index">
+                                <div class="table_body row m-0" *ngFor="let top of topQuriesWithNoResults;let i = index">
                                     <div class="col-10 header-title pr-3">{{top.query}}</div>
                                     <div class="col-2 header-title text-right">{{top.count}}</div>
                                 </div>
                             </div>
+                            
                         </div>
                         <app-pagination  [totalRecord]='tsqNoRtotalRecord' [limitpage]='tsqNoRlimitpage' [recordEnd]="tsqNoRrecordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
@@ -206,22 +207,63 @@
                         <div class="title-card">Top Search Results</div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-10 header-title">Searched Intent</div>
-                                <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
-                                    Count</div>
+                                <div class="col-3 header-title"><img src="assets/icons/sort_up_down.svg">Searched Intent</div>
+                                <div class="col-2 header-title"><img src="assets/icons/sort_up_down.svg">Appearances</div>
+                                <div class="col-1 header-title"><img src="assets/icons/sort_up_down.svg">Clicks</div>
+                                <div class="col-2 header-title"><img src="assets/icons/sort_up_down.svg">Click-through Rate</div>
+                                <div class="col-2 header-title"><img src="assets/icons/sort_up_down.svg">Avg Position</div>
+                                <div class="col-1 header-title"><img src="assets/icons/pos-thumb.svg"></div>
+                                <div class="col-1 header-title"><img src="assets/icons/neg-thumb.svg"></div>
+                                <!-- <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
+                                    Count</div> -->
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Access to debit account</div>
-                                <div class="col-2 body-title text-right">100</div>
+                                <div class="col-3 body-title ">Access to debit account</div>
+                                <div class="col-2 body-title">1200</div>
+                                <div class="col-1 body-title">1000</div>
+                                <div class="col-2 body-title">90%</div>
+                                <div class="col-2 body-title">2.8</div>
+                                <div class="col-1 body-title">1532</div>
+                                <div class="col-1 body-title">347</div>
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title text-right">30</div>
+                                <div class="col-3 body-title ">Opening a new account in HDFC</div>
+                                <div class="col-2 body-title">1130</div>
+                                <div class="col-1 body-title">1000</div>
+                                <div class="col-2 body-title">80%</div>
+                                <div class="col-2 body-title">3.8</div>
+                                <div class="col-1 body-title">1632</div>
+                                <div class="col-1 body-title">147</div>
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-10 body-title pr-3">Password change of Saving account</div>
-                                <div class="col-2 body-title text-right">20</div>
+                                <div class="col-3 body-title">Password change of Saving account</div>
+                                <div class="col-2 body-title">1090</div>
+                                <div class="col-1 body-title">950</div>
+                                <div class="col-2 body-title">70%</div>
+                                <div class="col-2 body-title">2.1</div>
+                                <div class="col-1 body-title">532</div>
+                                <div class="col-1 body-title">47</div>
                             </div>
+                            <div class="table_body row m-0">
+                                <div class="col-3 body-title">Opening a new saving account </div>
+                                <div class="col-2 body-title">1140</div>
+                                <div class="col-1 body-title">1300</div>
+                                <div class="col-2 body-title">50%</div>
+                                <div class="col-2 body-title">1.8</div>
+                                <div class="col-1 body-title">143</div>
+                                <div class="col-1 body-title">7</div>
+                            </div>
+                            <div class="table_body row m-0">
+                                <div class="col-3 body-title">Changing of Net banking Pin</div>
+                                <div class="col-2 body-title">1004</div>
+                                <div class="col-1 body-title">546</div>
+                                <div class="col-2 body-title">40%</div>
+                                <div class="col-2 body-title">8.8</div>
+                                <div class="col-1 body-title">2532</div>
+                                <div class="col-1 body-title">1347</div>
+                            </div>
+                            <!-- 
+                           
                             <div class="table_body row m-0">
                                 <div class="col-10 body-title pr-3">Opening a new account in HDFC</div>
                                 <div class="col-2 body-title text-right">15</div>
@@ -229,7 +271,7 @@
                             <div class="table_body row m-0">
                                 <div class="col-10 body-title pr-3">Changing of Net banking Pin</div>
                                 <div class="col-2 body-title text-right">2</div>
-                            </div>
+                            </div> -->
                         </div>
                         <app-pagination  [totalRecord]='totalRecord' [limitpage]='limitpage' [recordEnd]="recordEnd"
                         [allInOne]='false' (pageChanged)="paginate($event)"></app-pagination>
@@ -241,6 +283,7 @@
                     <div class="full-card">
                         <div class="title-card">Most Click Position</div>
                         <div echarts [options]="mostClickBar" class="demo-chart-graphMode"></div>
+                        <div class="text-center">Number of Clicks</div>
                     </div>
                 </div>
                 <div class="col-6 box-content">
@@ -293,15 +336,15 @@
                             <div class="content">
                                 <div class="title">New Users <span class="withresults"></span></div>
                                 <div class="count-data">
-                                    <span class="count"><img src="assets/icons/arrow_green.svg">1140</span>
-                                    <span class="percentage">+12%</span>
+                                    <span class="count"><img src="assets/icons/arrow_green.svg">940</span>
+                                    <span class="percentage">+7%</span>
                                 </div>
                             </div>
                             <div class="content">
                                 <div class="title">Repeat Users <span class="clicks"></span></div>
                                 <div class="count-data">
-                                    <span class="count"><img src="assets/icons/arrow_green.svg">1140</span>
-                                    <span class="percentage">+12%</span>
+                                    <span class="count"><img src="assets/icons/arrow_green.svg">200</span>
+                                    <span class="percentage">+3%</span>
                                 </div>
                             </div>
                         </div>
@@ -357,7 +400,7 @@
                             [container]='"body"' tooltipClass="metrics_tooltips"><img src="assets/icons/info.svg"></div>
                         <div class="title-card">Top Search Queries with No Results</div>
                         <div class="table-content-data" *ngIf="topQuriesWithNoResults">
-                            <div class="table_header row m-0" *ngFor="let top of topQuriesWithNoResults;let i = index">
+                            <div class="table_body row m-0" *ngFor="let top of topQuriesWithNoResults;let i = index">
                                 <div class="col-10 header-title pr-3">{{top.query}}</div>
                                 <div class="col-2 header-title text-right">{{top.count}}</div>
                             </div>
@@ -374,7 +417,7 @@
                             [container]='"body"' tooltipClass="metrics_tooltips"><img src="assets/icons/info.svg"></div>
                         <div class="title-card">Top Search Queries with No Clicks</div>
                         <div class="table-content-data" *ngIf="queriesWithNoClicks">
-                            <div class="table_header row m-0" *ngFor="let top of queriesWithNoClicks;let i = index">
+                            <div class="table_body row m-0" *ngFor="let top of queriesWithNoClicks;let i = index">
                                 <div class="col-10 header-title">{{top.query}}</div>
                                 <div class="col-2 header-title text-right">{{top.count}}</div>
                             </div>
@@ -401,6 +444,8 @@
         <div class="data-content"><span class="indication clicks"></span><span class="title">Searches with Clicks
                 :</span><span class="count-data">80</span></div>
     </div>
+
+    
     <!-- <div class="metrics-tooltips-hover userengagment-tooltip">          
         <div class="data-content">
             <div class="main-title">Total Users</div>
