traits UI Updates

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -4,7 +4,7 @@
         <span class="please-wait-message">Please Wait!</span>
     </div>
     <div class="header_sec">
-        <div class="title">Index Configurations</div>
+        <div class="title">Index Configuration</div>
         <div class="btn_sec">            
             <button class="kr-sg-button-secondary btn_lg"  (click)="saveConfig()">Save Configuration</button>
             <button class="kr-sg-button-primary btn_lg" (click)="reindex()">Re-Index</button>
