--- a/findly-builder/src/app/components/apps-home/apps-home.scss
+++ b/findly-builder/src/app/components/apps-home/apps-home.scss
@@ -143,8 +143,7 @@
 .findly-dashboard{
     height: 100%;
     background-color: #fff;
-    width: 1100px;
-    margin: 0 auto;
+    width: 100%;
     .main-heading{
         text-align: center;
         font-size: 20px;
@@ -152,14 +151,59 @@
         font-weight: bold;
     }
     .header-sec{
+        background: #F8F9FA;        
         align-items: center;
-        margin:0px;
-        padding: 40px 10px 30px 10px;
+        margin-bottom: 50px;                 
+        .adjust-width{
+            padding: 9px 10px;
+            width: 1100px;
+            margin: 0 auto !important;
+            min-height: 52px;
+            align-items: center;
+        }
+        .right-sec{
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            .kr-sg-input-text{
+                width: 300px;
+                right: 10px;
+                position: relative;
+            }
+            .seach-block{
+                color: #202124;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 12px;
+                margin-left: 30px;
+                img{
+                    margin-right: 7px;
+                    cursor: pointer;
+                    position: relative;
+                    top: -1px;
+                }
+            }
+            .add_feild{
+                color: #202124;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 14px;
+                margin-left: 30px;
+                cursor: pointer;
+                img{
+                    margin-right: 7px;
+                    position: relative;
+                    top: -1px;
+                }
+            }          
+        }
         .title{
-            text-transform: uppercase;
-            font-size: 14px;
-            font-weight: 600;
-            color: #202124;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 22px;
+            text-transform: capitalize;
+            color: #000000;
         }      
         .kr-sg-input-search{
             width: 250px;
@@ -210,6 +254,8 @@
         }          
     }
     .body-sec{
+        width: 1100px;
+        margin: 0 auto;
         .appsListingContainer{
             .empty{
                 display: none;
@@ -234,9 +280,10 @@
                 cursor: pointer;
                 transition: 0.3s all ease-in;
                 background: #FFFFFF;
-                border: 1px solid #BDC1C6;
+                border: 0px solid #BDC1C6;
                 box-sizing: border-box;
                 border-radius: 6px;
+                box-shadow: 0px -4px 80px rgba(0, 0, 0, 0.07), 0px -1.48494px 6.91958px rgba(0, 0, 0, 0.0186561);    
                 width: 255px;
                 max-width: 255px;
                 &:hover{
@@ -275,8 +322,7 @@
                         text-align: left;
                         color: #202124;
                         margin-top: 0;
-                        line-height: 1;
-                        margin-bottom: 1px;
+                        line-height: 17px;                        
                         font-weight: 500;
                         font-size: 14px;
                         padding-top: 3px;
@@ -287,10 +333,15 @@
                             white-space: nowrap;
                             display: inline-block;
                             min-width: auto;
+                            font-weight: 500;
+                            font-size: 14px;
+                            line-height: 17px;
                         }
                     }
                     .info-text{
-                        font-size: 12px;                      
+                        font-weight: normal;
+                        font-size: 12px;
+                        line-height: 15px;                    
                         text-align: left;
                         color: #5F6368;
                         margin-bottom: 0;
