--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -208,9 +208,9 @@
 </div>
 
 <kr-modal modalType="center" modalClass="sliderComponent modal_popups_" #statusModalPop id="sourceSlider">
-  <div class="modal-header noShadow">
-    <h4 class="header-title">{{selectedSource.name}}</h4>
-    <img src="assets/images/close.svg" class="closeCross" (click)="sliderStep?sliderBack():closeStatusModal();">
+  <div class="modal-header">
+    <h4 class="title">{{selectedSource.name}}</h4>
+    <img src="assets/icons/modal-close.svg" class="close_icon" (click)="sliderStep?sliderBack():closeStatusModal();">
   </div>
   <div class="modal-body source-modal-popup ">
 
@@ -651,21 +651,23 @@
     <div class="title">Crawl Web Domain</div>
     <div class="close_icon"><img class="ng-tns-c11-2" src="assets/icons/modal-close.svg"></div>
   </div>
-  <div class="modal-body">
+  <perfect-scrollbar class="perfect-scroll-modal-body">
+    <div class="modal-body">
 
-  </div>
+    </div>
+  </perfect-scrollbar>
   <div class="modal-footer">
       <button class="kr-sg-button-primary btn_lg">Proceed</button>
       <button class="kr-sg-button-secondary btn_lg">Back</button>
   </div>
 </kr-modal>  -->
-<kr-modal modalType="center" modalClass="sliderComponent" #statusModalDocument id="sourceSlider">
+<kr-modal modalType="center" modalClass="modal_popups_ sliderComponent" #statusModalDocument id="sourceSlider">
   <div class="modal-header">
-    <h4 class="header-title">{{selectedSource.name}}</h4>
-    <img src="assets/images/close.svg" class="closeCross" (click)="closeDocumentModal()">
-  </div>
-  <div class="modal-body source-modal-popup ">
-
+    <div class="title">{{selectedSource.name}}</div>
+    <div class="close_icon"><img (click)="closeDocumentModal()" src="assets/icons/modal-close.svg"></div>
+</div>
+<perfect-scrollbar class="perfect-scroll-modal-body">
+  <div class="modal-body textAlignLeft">
     <div class="kr-sg-data-table">
       <section class="table-content">
         <header class="table-header">
@@ -708,8 +710,9 @@
     </div>
     <!-- DATA TABLE ENDS HERE -->
   </div>
-  <div class="mod-foot">
-    <button class="kr-sg-button-primary btn_lg" (click) = "saveDocDetails()">Save</button>
-    <button class="kr-sg-button-secondary btn_lg" (click) = "cancelDocDetails()">Cancel</button>
+</perfect-scrollbar>  
+<div class="modal-footer">          
+  <button type="button" class="kr-sg-button-primary btn_lg" (click)="saveDocDetails()">Save</button>        
+  <button type="button" class="kr-sg-button-secondary btn_lg" (click) = "cancelDocDetails()">Cancel</button>
 </div>
 </kr-modal>
