--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1272,8 +1272,9 @@ div.divBlockEmptylastChild:first-child {
         background-color: #fff !important;       
         box-shadow: 0px -2px 4px rgba(32, 33, 36, 0.2);
         display: block !important;
+        text-align: right;
         button{
-            margin:0 10px 0 0 !important;
+            margin:0 0px 0 10px !important;
         }
     }
 }
